[type]:   fix [module]: grid|examples [id]:     # [desc]:   Deleted the .x-grid-with-col-lines .x-grid3-row CSS class because it was causing a double border between grid rows. Also turned off columnLines on the grid-plugins example.
git-svn-id: http://code.extjs.com/svn/ext/trunk@4777 c0a82769-a6a8-4f8a-96ba-7530dc2e272d

--- a/resources/css/visual/grid.css
+++ b/resources/css/visual/grid.css
@@ -257,10 +257,6 @@ td.x-grid3-hd-over .x-grid3-hd-inner, td.sort-desc .x-grid3-hd-inner, td.sort-as
     border-right-color:#ededed;
 }
 
-.x-grid-with-col-lines .x-grid3-row{
-    border-top-color:#ededed;
-}
-
 .x-grid-with-col-lines .x-grid3-row-selected {
 	border-top-color:#a3bae9;
 }
